--- a/sampleconfig/orderer.yaml
+++ b/sampleconfig/orderer.yaml
@@ -373,3 +373,49 @@ Consensus:
     # SnapDir specifies the location at which snapshots for etcd/raft are
     # stored. Each channel will have its own subdir named after channel ID.
     SnapDir: /var/hyperledger/production/orderer/etcdraft/snapshot
+
+################################################################################
+#
+#   SECTION: SBFT Local
+#
+#   - This section applies to the configuration of the SBFT-based orderer.
+#
+################################################################################
+SbftLocal:
+
+    # Address to use for SBFT internal communication
+    PeerCommAddr: ":6101"
+    CertFile: "sbft/testdata/cert1.pem"
+    KeyFile: "sbft/testdata/key.pem"
+    # Directory for SBFT data (persistence)
+    DataDir: "/tmp"
+
+################################################################################
+#
+#   SECTION: Genesis
+#
+#   - This section is pending removal but is left to support SBFT
+#     to be migrated to configtx.yaml.
+#
+################################################################################
+Genesis:
+
+    # Deprecated Batch Timeout: The amount of time to wait before creating a
+    # batch.
+    DeprecatedBatchTimeout: 10s
+
+    # DeprecatedBatchSize: The absolute maximum number of bytes allowed for
+    # the serialized messages in a batch.
+    DeprecatedBatchSize: 99 MB
+
+    # Defines the SBFT parameters when 'sbft' is specified as the 'OrdererType'
+    SbftShared:
+        # Number of peers
+        "N": 1
+        # Fault tolerance
+        F: 0
+        # Timeout of requests (seconds)
+        RequestTimeoutNsec: 1000000000
+        # Peers (PeerCommAddr) with the path of their cert
+        Peers:
+            ":6101": "/var/hyperledger/orderer/sbft/cert1.pem"
