--- a/sampleconfig/orderer.yaml
+++ b/sampleconfig/orderer.yaml
@@ -380,7 +380,7 @@ Consensus:
 #
 #   - This section applies to the configuration of the SBFT-based orderer.
 #
-################################################################################
+#############################################¬###################################
 SbftLocal:
 
     # Address to use for SBFT internal communication
@@ -388,6 +388,9 @@ SbftLocal:
     CertFile: "sbft/testdata/cert1.pem"
     KeyFile: "sbft/testdata/key.pem"
     # Directory for SBFT data (persistence)
-#    DataDir: "/tmp"
-    WALDir: /var/hyperledger/production/orderer/sbft/wal
-    SnapDir: /var/hyperledger/production/orderer/sbft/snapshot
+    DataDir: ""/var/hyperledger/production/orderer/rocksdb"
+    # rocksdb configurations
+    Db:
+        MaxLogFileSize: 10485760
+        KeepLogFileNum: 10
+        LogLevel: "warn"
