--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -193,3 +193,7 @@ noverify = [
 [[constraint]]
   name = "github.com/prometheus/client_golang"
   version = "0.9.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/tjfoc/gmsm"
