Extend bccsp to support different algo
Signed-off-by: grapebaba <281165273@qq.com>

--- a/examples/cluster/config/fabric-ca-server-config.yaml
+++ b/examples/cluster/config/fabric-ca-server-config.yaml
@@ -207,6 +207,7 @@ csr:
 bccsp:
     default: SW
     sw:
+        Algorithm: ECDSA
         hash: SHA2
         security: 256
         filekeystore:
