--- a/examples/cluster/config/orderer.yaml
+++ b/examples/cluster/config/orderer.yaml
@@ -86,6 +86,7 @@ General:
 
         # SW configures the software based blockchain crypto provider.
         SW:
+            Algorithm: ECDSA
             # TODO: The default Hash and Security level needs refactoring to be
             # fully configurable. Changing these defaults requires coordination
             # SHA2 is hardcoded in several places, not only BCCSP
