--- a/examples/cluster/config/core.yaml
+++ b/examples/cluster/config/core.yaml
@@ -196,6 +196,7 @@ peer:
     BCCSP:
         Default: SW
         SW:
+            Algorithm: ECDSA
             # TODO: The default Hash and Security level needs refactoring to be
             # fully configurable. Changing these defaults requires coordination
             # SHA2 is hardcoded in several places, not only BCCSP
