--- a/peer/common/testdata/notset.yaml
+++ b/peer/common/testdata/notset.yaml
@@ -6,6 +6,7 @@ peer:
     BCCSP:
         Default: SW
         SW:
+            Algorithm: ECDSA
             Hash: SHA2
             Security: 256
             FileKeyStore:
