--- a/sampleconfig/core.yaml
+++ b/sampleconfig/core.yaml
@@ -276,6 +276,7 @@ peer:
         Default: SW
         # Settings for the SW crypto provider (i.e. when DEFAULT: SW)
         SW:
+            Algorithm: ECDSA
             # TODO: The default Hash and Security level needs refactoring to be
             # fully configurable. Changing these defaults requires coordination
             # SHA2 is hardcoded in several places, not only BCCSP
