--- a/examples/cluster/config/configtx.yaml
+++ b/examples/cluster/config/configtx.yaml
@@ -29,6 +29,11 @@ Organizations:
 
         AdminPrincipal: Role.ADMIN
 
+        # Hash function used
+        Hash:
+            hashFamily: SHA2
+            hashFunction: SHA256
+
     - &Org1
         # DefaultOrg defines the organization which is used in the sampleconfig
         # of the fabric.git development environment
@@ -47,6 +52,11 @@ Organizations:
             # encoded in the genesis block in the Application section context
             - Host: peer1
               Port: 7051
+
+        # Hash function used
+        Hash:
+            hashFamily: SHA2
+            hashFunction: SHA256
 
 ################################################################################
 #
